cmake_minimum_required(VERSION 3.2)

set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
set(PROJECT_VESRION 0.0.${PATCH_VERSION})

project(graphicseditordecl VERSION ${PROJECT_VESRION})

add_executable(graphicseditordecl main.cpp editor.cpp
        ellipse.cpp graphicsitem.cpp gui.cpp line.cpp)

set_target_properties(graphicseditordecl PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED ON
)

if (MSVC)
    target_compile_options(graphicseditordecl PRIVATE
        /W4
    )
else ()
    target_compile_options(graphicseditordecl PRIVATE
        -Wall -Wextra -pedantic -Werror
    )
endif()


install(TARGETS graphicseditordecl RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT example@example.com)

include(CPack)